[package]
edition = "2021"
name = "puzzle-image-gen"
version = "0.1.0"
[dependencies]
delaunator = "1.0.1"
earcutr = "0.2.0"
env_logger = "0.9.0"
humantime = "2.1.0"
image = "0.24.1"
log = "0.4.16"
nalgebra = "0.30.1"
ndarray = "0.15.4"
num = "0.4.0"
pollster = "0.2.5"
rand = "0.8.5"
rayon = "1.5.1"
splines = "4.0.3"

[dependencies.bytemuck]
features = ["derive"]
version = "1.9.1"

[dependencies.clap]
features = ["derive"]
version = "3.1.6"

[dependencies.imageproc]
git = "https://github.com/image-rs/imageproc"
rev = "b7942657b1a370fc485507693ed4df1f8a116cb7"

[dependencies.wgpu]
features = ["trace"]
git = "https://github.com/gfx-rs/wgpu"
rev = "b52d68d5adc3392d3157edcb33f1d5e8470a449a"
